# gwentai

./: Cargo.toml  decks.json
src/: deck.rs  disk.rs  gwentone.rs  main.rs  playgwent.rs  progress.rs
src/gwentone/: model.rs  scrape.rs  storage.rs
src/playgwent/: deck.rs
templates/: cards.html
