[package]
name = "gwentai"
version = "0.1.0"
authors = ["Dylan Fontana <dyfontana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3.14"
indicatif = "0.16.0"
nalgebra = "0.26.2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }